[package]
name = "messagechains"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
serde = { version = "1.0.148", features = ["derive"] }
sha2 = "0.10.6"

[target."wasm32-unknown-unknown".dependencies]
js-sys = "0.3.6"
wasm-bindgen = "0.2.83"
hex = "0.4.3"
serde_json = "1.0.89"
